<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_screen_title"
        android:layout_marginTop="200dp"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_screen_exp"
        android:text="@string/first_screen_title_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:id="@+id/first_screen_exp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/first_screen_exp_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_screen_button"
        app:layout_constraintTop_toBottomOf="@id/first_screen_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/first_screen_button"
        android:text="@string/first_screen_button_name"
        android:layout_marginBottom="100dp"
        android:textColor="@color/main_button_text_color"
        android:background="@drawable/rounded_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="107dp"
        app:layout_constraintBottom_toTopOf="@id/first_screen_image"
        app:layout_constraintTop_toBottomOf="@id/first_screen_exp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_screen_image"
        android:src="@drawable/ic__first_screen_illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>